# AtomCAD

./: Cargo.toml  build.rs
crates/app/src/: app.rs
crates/common/: Cargo.toml
crates/common/src/: bounding_box.rs  lib.rs
crates/periodic-table/: Cargo.toml
crates/periodic-table/src/: lib.rs
credits/: CREDITS.md
src/: assets.rs  gui.rs  lib.rs  main.rs  menu.rs  platform.rs
src/platform_impl/: defaults.rs  mod.rs  web.rs
src/platform_impl/macos/: menubar.rs  mod.rs
src/state/: cadview.rs  loading.rs  mod.rs  splashscreen.rs
