[package]
name = "atomcad"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.14" }
common = { package = "atomcad-common", path = "crates/common" }
serde = { version =  "1.0" }
ultraviolet = { version = "0.9" }

# Enable a small amount of optimization for our code in debug mode:
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy):
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { workspace = true }
bevy_asset_loader = { version = "0.21" }
bitflags = "2"
common = { workspace = true }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3" }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
embed-resource = "2"
